Changed Matrix initializing method
Added factory method to implicitly initialize Matrix element
type.
Changed constructors to initializer methods.
Fixed unit-tests to be compatible with new logic.
Added new exception type.