@@ -3,7 +3,9 @@ package main.data;
 import main.data.arithmetic.*;
 import main.data.exceptions.BadIndexException;
 import main.data.exceptions.MatrixIllegalArgumentException;
+import main.data.exceptions.MatrixNotInitializedException;
 
+import java.lang.annotation.ElementType;
 import java.util.ArrayList;
 import java.util.Arrays;
 
@@ -12,20 +14,60 @@ import java.util.Arrays;
  * @author Alexander Fal (falalexandr007@gmail.com)
  * @version 1.0
  */
+@SuppressWarnings("unchecked")
 public class Matrix <T extends Number> {
     private ArrayList< ArrayList< Numeric< T > > > matrix;
     private int rows, cols;
+    private Class elemType;
 
-//    TODO: Is not really working right now, add static factory methods with implicitly stated type of matrix elements
+//    COMPLETED: Is not really working right now, add static factory method with implicitly stated type of matrix elements
+
+    private Matrix(Class elemType) {
+        this.elemType = elemType;
+    }
 
     /**
-     * Constructs matrix from {@link ArrayList} of {@link ArrayList<T>}
+     * Initializes the type parameter of Matrix. Actual Matrix is not constructed.
+     * @param elemType type of matrix elements
+     * @return Matrix object which must be initialized using one of provided methods
+     */
+    public static Matrix of(Class elemType) {
+        Matrix<?> mat;
+        switch (elemType.getSimpleName().toLowerCase()) {
+            case "long":
+                mat = new Matrix<Long>(elemType);
+                break;
+            case "integer":
+            case "int":
+                mat = new Matrix<Integer>(elemType);
+                break;
+            case "short":
+                mat = new Matrix<Short>(elemType);
+                break;
+            case "float":
+                mat = new Matrix<Float>(elemType);
+                break;
+            case "double":
+                mat = new Matrix<Double>(elemType);
+                break;
+            default:
+                throw new MatrixIllegalArgumentException(MatrixIllegalArgumentException.WRONG_TYPE_MESSAGE);
+        }
+
+        return mat;
+    }
+
+    /**
+     * Initializes matrix with elements from {@link ArrayList} of {@link ArrayList<T>}
      * @param matrix {@link ArrayList} from which to construct matrix
      * @throws MatrixIllegalArgumentException if rows in {@link ArrayList} have different length or {@code matrix == null}
      */
-    public Matrix(ArrayList<ArrayList<T>> matrix) {
+    public Matrix initFrom(ArrayList<ArrayList<T>> matrix) {
         if(matrix == null)
             throw new MatrixIllegalArgumentException(MatrixIllegalArgumentException.ARGUMENT_CANT_BE_NULL_MESSAGE);
+
+        if(matrix.get(0).get(0).getClass() != elemType)
+            throw new MatrixIllegalArgumentException(MatrixIllegalArgumentException.INCOPATIBLE_TYPE_EXCEPTION);
 
         int length = matrix.get(0).size();
         for(ArrayList<T> aMatrix : matrix)
@@ -43,12 +85,45 @@ public class Matrix <T extends Number> {
 
         rows = this.matrix.size();
         cols = this.matrix.get(0).size();
+
+        return this;
     }
 
-//    TODO: Abstract Fabric ?????
-    @SuppressWarnings("unchecked")
+    /**
+     * Initializes matrix with values from two-dimensional array
+     * @param matrix array from which to init matrix
+     * @throws MatrixIllegalArgumentException if rows in array have different length or {@code matrix == null}
+     */
+    public Matrix initFrom(T[][] matrix) {
+        if(matrix == null)
+            throw new MatrixIllegalArgumentException(MatrixIllegalArgumentException.ARGUMENT_CANT_BE_NULL_MESSAGE);
+
+        if(matrix[0][0].getClass() != elemType)
+            throw new MatrixIllegalArgumentException(MatrixIllegalArgumentException.INCOPATIBLE_TYPE_EXCEPTION);
+
+
+        this.matrix = new ArrayList<>(matrix.length);
+
+        int length = matrix[0].length;
+        for (int i = 0; i < matrix.length; i++) {
+            if (matrix[i].length != length)
+                throw new MatrixIllegalArgumentException(MatrixIllegalArgumentException.DIFFERENT_ROWS_LENGTH_MESSAGE);
+
+            this.matrix.add(new ArrayList<>());
+            ArrayList<Numeric<T>> new_row = this.matrix.get(i);
+            for(T val : matrix[i])
+                addVal(new_row, val);
+        }
+
+        rows = matrix.length;
+        cols = matrix[0].length;
+
+        return this;
+    }
+
     private void addVal(ArrayList<Numeric<T>> new_row, T val) {
-        switch (val.getClass().getSimpleName().toLowerCase()) {
+        //    TODO: Abstract Fabric ?????
+        switch (elemType.getSimpleName().toLowerCase()) {
             case "long":
                 new_row.add((Numeric<T>) new RichLong((Long) val));
                 break;
@@ -69,37 +144,11 @@ public class Matrix <T extends Number> {
     }
 
     /**
-     * Constructs matrix from two-dimensional array
-     * @param matrix array from which to construct matrix
-     * @throws MatrixIllegalArgumentException if rows in array have different length or {@code matrix == null}
-     */
-    public Matrix(T[][] matrix) {
-        if(matrix == null)
-            throw new MatrixIllegalArgumentException(MatrixIllegalArgumentException.ARGUMENT_CANT_BE_NULL_MESSAGE);
-
-        this.matrix = new ArrayList<>(matrix.length);
-
-        int length = matrix[0].length;
-        for (int i = 0; i < length; i++) {
-            if (matrix[i].length != length)
-                throw new MatrixIllegalArgumentException(MatrixIllegalArgumentException.DIFFERENT_ROWS_LENGTH_MESSAGE);
-
-            this.matrix.add(new ArrayList<>());
-            ArrayList<Numeric<T>> new_row = this.matrix.get(i);
-            for(T val : matrix[i])
-                addVal(new_row, val);
-        }
-
-        rows = matrix.length;
-        cols = matrix[0].length;
-    }
-
-    /**
      * Constructs dimensions x dimensions square matrix filled with zeros
      * @param dimensions length of rows and columns; must be greater than 2
      * @throws MatrixIllegalArgumentException if {@code dimensions < 2}
      */
-    public Matrix(int dimensions) {
+    public Matrix initZero(int dimensions) {
         if(dimensions < 2)
             throw new MatrixIllegalArgumentException(MatrixIllegalArgumentException.WRONG_DIMENSIONS_NUMBER_MESSAGE);
 
@@ -113,6 +162,8 @@ public class Matrix <T extends Number> {
             for(int j = 0; j < dimensions; j++)
                 row.add(null);
         }
+
+        return this;
     }
 
     /**
@@ -121,7 +172,7 @@ public class Matrix <T extends Number> {
      * @param cols number of columns; must be greater than 2
      * @throws MatrixIllegalArgumentException if {@code rows < 2 || cols < 2}
      */
-    public Matrix(int rows, int cols) {
+    public Matrix initZero(int rows, int cols) {
         if(rows < 2)
             throw new MatrixIllegalArgumentException(MatrixIllegalArgumentException.WRONG_ROWS_NUMBER_MESSAGE);
         if(cols < 2)
@@ -138,6 +189,8 @@ public class Matrix <T extends Number> {
             for(int j = 0; j < cols; j++)
                 row.add(null);
         }
+
+        return this;
     }
 
     /**
@@ -148,6 +201,9 @@ public class Matrix <T extends Number> {
      * @throws BadIndexException if {@code i >= this.rows || i < 0 || j >= this.cols || j < 0}
      */
     public T get(int i, int j) {
+        if(matrix == null)
+            throw new MatrixNotInitializedException(MatrixNotInitializedException.MATRIX_IS_NOT_INITIALIZED_MESSAGE);
+
         if(i >= rows || j >= cols)
             throw new BadIndexException(BadIndexException.INDEX_OUT_OF_BOUNDS_MESSAGE);
         if(i < 0 || j < 0)
@@ -155,10 +211,31 @@ public class Matrix <T extends Number> {
 
         Numeric<T> ret = matrix.get(i).get(j);
 
-        return ret == null ? (T) Double.valueOf(0) : ret.getVal();
+        return ret == null ? zeroVal() : ret.getVal();
+    }
+
+    private T zeroVal() {
+        switch(elemType.getSimpleName().toLowerCase()) {
+            case "long":
+                return (T) new Long(0L);
+            case "integer":
+            case "int":
+                return (T) new Integer(0);
+            case "short":
+                return (T) new Short((short)0);
+            case "float":
+                return (T) new Float(0.);
+            case "double":
+                return (T) new Double(0.);
+            default:
+                throw new RuntimeException("Can't really happen");
+        }
     }
 
     public Numeric<T> getNumeric(int i, int j) {
+        if(matrix == null)
+            throw new MatrixNotInitializedException(MatrixNotInitializedException.MATRIX_IS_NOT_INITIALIZED_MESSAGE);
+
         if(i >= rows || j >= cols)
             throw new BadIndexException(BadIndexException.INDEX_OUT_OF_BOUNDS_MESSAGE);
         if(i < 0 || j < 0)
@@ -174,8 +251,11 @@ public class Matrix <T extends Number> {
      * @param val value to set
      * @throws BadIndexException if {@code i >= this.rows || i < 0 || j >= this.cols || j < 0}
      */
-    @SuppressWarnings("unchecked")
+
     public void set(int i, int j, T val) {
+        if(matrix == null)
+            throw new MatrixNotInitializedException(MatrixNotInitializedException.MATRIX_IS_NOT_INITIALIZED_MESSAGE);
+
         if(i >= rows || j >= cols)
             throw new BadIndexException(BadIndexException.INDEX_OUT_OF_BOUNDS_MESSAGE);
         if(i < 0 || j < 0)
@@ -206,6 +286,9 @@ public class Matrix <T extends Number> {
      * @return number of rows in matrix
      */
     public int getRows() {
+        if(matrix == null)
+            throw new MatrixNotInitializedException(MatrixNotInitializedException.MATRIX_IS_NOT_INITIALIZED_MESSAGE);
+
         return rows;
     }
 
@@ -214,6 +297,9 @@ public class Matrix <T extends Number> {
      * @return number of columns in matrix
      */
     public int getCols() {
+        if(matrix == null)
+            throw new MatrixNotInitializedException(MatrixNotInitializedException.MATRIX_IS_NOT_INITIALIZED_MESSAGE);
+
         return cols;
     }
 
@@ -221,11 +307,15 @@ public class Matrix <T extends Number> {
      * Add all values to matrix starting from [0][0].
      * Left to right, top to bottom.
      * First {@code cols * rows} values are added, all extra values are ignored.
+     * Matrix must be initialized.
      * @param values values to be added
      * @return {@link Matrix} filled with specified values
      */
     @SafeVarargs
     public final Matrix addAll(T... values) {
+        if(matrix == null)
+            throw new MatrixNotInitializedException(MatrixNotInitializedException.MATRIX_IS_NOT_INITIALIZED_MESSAGE);
+
         for(int i = 0; i < rows; i++)
             for(int j = 0; j < cols; j++)
                 try {
